Fix overflow on x axis

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
     font-family: 'Roboto', sans-serif;
     color: variables.$textColor;
     list-style: none;
+    overflow-x: hidden;
 }
 
 .container {
